[gd_scene load_steps=9 format=3 uid="uid://7y74si5766bp"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_rrtf8"]
[ext_resource type="Texture2D" uid="uid://dsi1nxe4vo6kn" path="res://assets/textures/bg.png" id="1_smydy"]
[ext_resource type="PackedScene" uid="uid://bb0bfl1lv2tra" path="res://scenes/hud.tscn" id="2_gsh6n"]
[ext_resource type="PackedScene" uid="uid://1uwsti2pcexb" path="res://scenes/player.tscn" id="2_oqrbq"]
[ext_resource type="PackedScene" uid="uid://gx2s3scxw8rq" path="res://scenes/enemy_spawner.tscn" id="3_er3is"]
[ext_resource type="AudioStream" uid="uid://bn112p1qrwu6n" path="res://assets/audio/hit.wav" id="6_tir3v"]
[ext_resource type="AudioStream" uid="uid://din24egxjtowp" path="res://assets/audio/explode.wav" id="7_jx2mb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bu1uk"]
size = Vector2(65, 937)

[node name="Game" type="Node2D"]
script = ExtResource("1_rrtf8")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("2_gsh6n")]

[node name="Background" type="TextureRect" parent="."]
offset_right = 1300.0
offset_bottom = 742.0
texture = ExtResource("1_smydy")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_oqrbq")]
position = Vector2(118, 365)

[node name="EnemySpawner" parent="." instance=ExtResource("3_er3is")]

[node name="Deathzone" type="Area2D" parent="."]
position = Vector2(-121, 406)
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deathzone"]
position = Vector2(-176, -50)
shape = SubResource("RectangleShape2D_bu1uk")

[node name="EnemyHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_tir3v")

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_jx2mb")

[connection signal="took_damage" from="Player" to="." method="_on_player_took_damage"]
[connection signal="enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_enemy_spawned"]
[connection signal="path_enemy_spawned" from="EnemySpawner" to="." method="_on_enemy_spawner_path_enemy_spawned"]
[connection signal="area_entered" from="Deathzone" to="." method="_on_deathzone_area_entered"]
